Current Shidacea version: 0.0.1d

Version history:

0.0.1
- First versioning

TODO:
- Add sounds
	- Add sound processor for each entity
- Ensure that no segmentation fault or, even better, no C++ exception happens
- Remove SpecialContainer if possible
- More compilation options
	- Toggle for ImGui
	- Toggle for SFML
	- Locking option (no more scripts will be loaded besides the pre-compiled ones)