@@ -1,14 +1,11 @@
 class MapConfig
 
 	attr_reader :map_name
+	attr_accessor :script
 
 	def initialize(map_name)
 		@map_name = map_name
 		@script = nil
-	end
-
-	def script=(script)
-		@script = script
 	end
 
 	def run_script
